2007-12-28  Julian Lamb
	* gerber.c, many files: Finish implementing all remaining Gerber functions
	  (offsets, mirrors, rotations, knockout, axis select, scale factors,
	  and justify). Rework the min/max calculation routines for much more
	  accurate autoscaling.  Also, much updating was needed to allow the new
	  Gerber functions to autoscale correctly (e.g. scaling needs multiply all
	  the min/max values by the image scale factor, etc).
	* tests/inputs/test-...: Add test files for all Gerber functions.
	* tests/golden/*: Update all the golden files, since the autoscaling
	  rework made all the old golden files fail, since the scale factor is now
	  slightly off from the previous ones, making them fail.

2007-12-28  Stuart Brorson (sdb@cloud9.net)
	* src/callbacks.c, src/drill.c, src/gerb_stats.[hc], src/gerber.c
	src/gerbv_screen.h, src/interface.c, src/pick-and-place.c:
	Added more checks for file type. This should fix problem
	of segfaults when reading RS-274D.  Make messages text window
	(in sidepane) pop up if an error or warning is written to it so
	user can immediately see problems.  Robustified a few areas
	of stats gathering code.	
	
2007-12-25  Stuart Brorson (sdb@cloud9.net)
	* src/gerber.c, src/callbacks.c, src/gerb_stats.[hc]:
	Added reporting of all D codes used to Gerber reports window.

2007-12-23  Julian Lamb
	* gerber.c, many files: Start reorganization of some gerb_image
	  parameters in preparation for adding final Gerber commands
	  like rotation, mirroring, and knockout. Also, normalize all
	  dimensions to inches in the image in order to simplify
	  rendering.
	* tests/inputs/test-...: Add first three testsuite files to test
	  new commands.

2007-12-20  Stuart Brorson (sdb@cloud9.net)
	* callbacks.c:  Add scrollbars to Gerber aperture report window
	since the report can grow to be very long.
	
2007-12-20  Julian Lamb
	* render.c,callbacks.c,interface.c: Connect rulers and scrollbars and start
	  getting them functional.
	