@@ -35,6 +35,10 @@ enum opcodes {NOP,      /* No Operation */
 	      PUSH,     /* Ordinary stack operations. Uses float */
 	      PPUSH,    /* Parameter onto stack, 1 is first parameter and 
 			    so on (compare gerber $1, $2 and so on */ 
+	      PPOP,     /* Data on stack popped onto parameter register.
+			   First parameter popped from stack is which register
+			   to store data and second parameter popped is actual
+			   data. */
 	      ADD, SUB, /* Mathematical operations */
 	      MUL, DIV, 
 	      PRIM};    /* Defines what primitive to draw. Inparameters
